# N2M

./: .gitignore  .gitmodules  AA copy.py  AA.py  MUJOCO_LOG.TXT  N2M_CHECKLIST.md  PREDICTOR_IMPLEMENTATION.md  README.md  Readme.md  asset-manifest.json  convert_yaml_to_json.py  data_manager.sh  index.html  install.sh  install_tmp_backup.sh  launch_cam.sh  launch_zed.sh  main.py  n2m_manager.sh  package-lock.json  package.json  pyproject.toml  readme.md  real_frame.ply  requirements.txt  run_client_manipulation_dp.sh  run_client_manipulation_pi0.sh  setup.py  sync_to_rainbow.sh
benchmark/: __init__.py
benchmark/core/: __init__.py  benchmark_runner.py  data_collector.py  rollout.py
benchmark/env/: __init__.py  env_utils.py
benchmark/policy/: __init__.py  base.py  robomimic_policy.py  vla_policy.py  vlm_policy.py
benchmark/predictor/: __init__.py  base.py  blank_predictor.py  lelan_predictor.py  mobipi_predictor.py  n2m_predictor.py  reachability_predictor.py
benchmark/utils/: __init__.py  collision_utils.py  navigation_utils.py  obs_utils.py  observation_utils.py  sample_utils.py  sampling_utils.py  transform_utils.py  visualization_utils.py
configs/: config.json  config.yaml
configs/benchmark/: collection.yaml  evaluation.yaml
configs/env/: robocasa.yaml
configs/inference/: N2M_CloseDoubleDoor.json  N2M_CloseDrawer.json  N2M_OpenSingleDoor_ACT.json  N2M_OpenSingleDoor_BCTransformer.json  N2M_OpenSingleDoor_DP.json  N2M_PnPCounterToCab.json  config.json
configs/n2m/: CloseDoubleDoor.json  CloseDrawer.json  OpenSingleDoor.json  PnPCounterToCab.json
configs/paths/: default.yaml
configs/policy/: bc_transformer.yaml  diffusion.yaml
configs/predictor/: blank.yaml  lelan.yaml  mobipi.yaml  n2m.yaml  reachability.yaml
configs/robocasa/: CloseDoubleDoor.json  CloseDrawer.json  OpenSingleDoor.json  PnPCounterToCab.json
configs/training/: config.json  train.json
doc/: Teaser_real.mov
docs/: Feature4_robocasa_x3_3k.mov  RENDERING_ISSUES.md
n2m/: __init__.py
n2m/data/: dataset.py
n2m/model/: N2Mnet.py
n2m/module/: N2Mmodule.py
n2m/scripts/: sample_camera_poses.py  sample_camera_poses_real.py  train.py
n2m/utils/: loss.py  point_cloud.py  prediction.py  sample_utils.py
nav2man/: setup.py
nav2man/nav2man.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
public/: index.html
scripts/: 1_data_collection_with_rollout.py  add_pitch_90.py  calculate_t_base_cam.py  collect_mobipi_images.py  collect_n2m_data.py  convert_meta.py  count_positive_negative.py  experiment_sample_efficiency.sh  inference.sh  process_dataset.sh  rainbow2sir.py  rollout.sh  run_benchmark.py  sample_camera_poses.py  sample_meta.py  sample_meta_aug_fine_grained.py  sample_meta_aug_positive.py  sample_meta_aug_positive_num.py  sample_meta_aug_positive_ones.py  sample_meta_fine_grained.py  sample_meta_half_2_1.py  sample_meta_half_positive.py  sample_meta_half_positive_one.py  sample_meta_layout_style.py  sample_meta_positive.py  sample_meta_positive_one.py  train.py  train.sh  train_SIR.sh  train_and_inference.sh  view_aug.sh  visualize_attention.py  visualize_heat_map.py  visualize_prediction_4d.py  visualize_rollouts.py  visualize_with_base_and_camera.py  visualize_with_origin.py
scripts/render/: CMakeLists.txt  README.md  fpv_render.cpp
src/: index.css
src/components/: PointCloudViewer.js  Project.css  Project.js
src/rby_wrapper/: CMakeLists.txt  package.xml
src/rby_wrapper/config/: amcl.yaml  localization.yaml  mapping.yaml  rby_display.rviz  rby_display_multi.rviz
src/rby_wrapper/launch/: cam_render.launch.py  display.launch.py  localization.launch.py  mapping.launch.py  multi_robot_display.launch.py
src/rby_wrapper/models/: soft_gripper_finger.mtl  soft_gripper_finger.stl
src/rby_wrapper/models/rby1a/urdf_ros/: model.urdf  model.xacro
src/rby_wrapper/msg/: RobotControl.msg  RobotState.msg
src/rby_wrapper/scripts/: client_SIR_inference.py  client_data_collection.py  client_manipulation_dp.py  client_manipulation_pi0.py  client_naive_navigation.py  client_pcl_frameID_converter.py  client_rollout_manager copy.py  client_rollout_manager.py  server_rby1_robot.py  server_teleoperation.py  util_command.py  util_components.py  util_msg.py  util_pose.py  util_settings.py  util_tf_broadcaster.py
src/rby_wrapper/src/: base_se2_helper.cpp  camRender_helper.cpp  client_helper_stitch.cpp  fpv_render_for_Inference.cpp  laser_helper.cpp
static/css/: main.0d4a0285.css  main.0d4a0285.css.map  main.1071b4a5.css  main.1071b4a5.css.map  main.23eca5d0.css  main.23eca5d0.css.map  main.29c499e2.css  main.29c499e2.css.map  main.481bdc0c.css  main.481bdc0c.css.map  main.62f3da05.css  main.62f3da05.css.map  main.64f4cf3c.css  main.64f4cf3c.css.map  main.722042e7.css  main.722042e7.css.map  main.76ee2a15.css  main.76ee2a15.css.map  main.779cd704.css  main.779cd704.css.map  main.88e229f9.css  main.88e229f9.css.map  main.c6fa465a.css  main.c6fa465a.css.map  main.c70aa64a.css  main.c70aa64a.css.map  main.cd551894.css  main.cd551894.css.map  main.d3ba9bdc.css  main.d3ba9bdc.css.map  main.edd4fc59.css  main.edd4fc59.css.map
static/js/: main.04958cec.js  main.04958cec.js.map  main.06983d1c.js  main.06983d1c.js.map  main.0de141cb.js  main.0de141cb.js.map  main.1be940a6.js  main.1be940a6.js.map  main.2a0846e5.js  main.2a0846e5.js.map  main.2ef506c6.js  main.2ef506c6.js.map  main.37fc2a39.js  main.37fc2a39.js.map  main.39ff801f.js  main.39ff801f.js.map  main.3a28a862.js  main.3a28a862.js.map  main.4b1f7096.js  main.4b1f7096.js.map  main.549b0e22.js  main.549b0e22.js.map  main.6132d317.js  main.6132d317.js.map  main.65938ebb.js  main.65938ebb.js.map  main.79573754.js  main.79573754.js.map  main.8f1b745d.js  main.8f1b745d.js.map  main.92c7d09c.js  main.92c7d09c.js.map  main.b9f0e4d7.js  main.b9f0e4d7.js.map  main.be9a4510.js  main.be9a4510.js.map  main.bf7c6fd5.js  main.bf7c6fd5.js.map  main.c2cfcac0.js  main.c2cfcac0.js.map  (+16 more)
utils/: data_visualizer.py  pcd_visualizer.py  read_h5.py  visualize_rollout.py
videos/: Generalizability_all_in_one_x8_05k_web.mov  Teaser_x8_05k_web.mov
(+67 files in other folders)
