[project]
name = "n2m"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "easydict>=1.13",
    "numpy==1.23.5",
    "open3d>=0.19.0",
    "termcolor>=2.4.0",
    "timm>=1.0.17",
    "torch==2.2.1",
    "torchaudio==2.2.1",
    "torchvision==0.17.1",
    "wandb>=0.21.0",
]
